exports[`test should render a default component 1`] = `
<div
  class="detail-view">
  <div
    class="title">
    <h1
      class="primary-text" />
  </div>
  <hr
    class="divider" />
  <div
    class="footer-text" />
</div>
`;

exports[`test should render a title 1`] = `
<div
  class="detail-view">
  <div
    class="title">
    <h1
      class="primary-text">
      Header
    </h1>
  </div>
  <hr
    class="divider" />
  <div
    class="footer-text" />
</div>
`;

exports[`test should render details 1`] = `
<div
  class="detail-view">
  <div
    class="title">
    <h1
      class="primary-text">
      Header
    </h1>
    <div
      class="subtitle">
      Subtitle 1
    </div>
    <div
      class="subtitle">
      Subtitle 2
    </div>
  </div>
  <hr
    class="divider" />
  <p>
     Detail information 
  </p>
  <hr
    class="divider" />
  <div
    class="footer-text" />
</div>
`;

exports[`test should render footer 1`] = `
<div
  class="detail-view">
  <div
    class="title">
    <h1
      class="primary-text">
      Header
    </h1>
    <div
      class="subtitle">
      Subtitle 1
    </div>
    <div
      class="subtitle">
      Subtitle 2
    </div>
  </div>
  <hr
    class="divider" />
  <p>
     Detail information 
  </p>
  <hr
    class="divider" />
  <div
    class="footer-text">
    Footer text
  </div>
</div>
`;

exports[`test should render graph 1`] = `
<div
  class="detail-view">
  <div
    class="title">
    <h1
      class="primary-text">
      Header
    </h1>
    <div
      class="subtitle">
      Subtitle 1
    </div>
    <div
      class="subtitle">
      Subtitle 2
    </div>
  </div>
  <hr
    class="divider" />
  <div>
     This is where a graph would go 
  </div>
  <hr
    class="divider" />
  <div
    class="footer-text" />
</div>
`;

exports[`test should render subtitles 1`] = `
<div
  class="detail-view">
  <div
    class="title">
    <h1
      class="primary-text">
      Header
    </h1>
    <div
      class="subtitle">
      Subtitle 1
    </div>
    <div
      class="subtitle">
      Subtitle 2
    </div>
  </div>
  <hr
    class="divider" />
  <div
    class="footer-text" />
</div>
`;

exports[`test should render without a divider when indicated 1`] = `
<div
  class="detail-view">
  <div
    class="title">
    <h1
      class="primary-text">
      Header
    </h1>
    <div
      class="subtitle">
      Subtitle 1
    </div>
    <div
      class="subtitle">
      Subtitle 2
    </div>
  </div>
  <p>
     Detail information 
  </p>
  <div
    class="footer-text">
    Footer text
  </div>
</div>
`;
